-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
None
-
d8b7c03cc (dev), 4b424f52f (tqtc/lts-5.15), f4d0320f4 (6.6), 047ecf5b2 (6.5), 1ac23bf15 (tqtc/lts-6.2)
-
DaVinci 87
The documentation for QSettings states that Qt for Embedded Linux has different default path than Linux. This hasn't been true since Qt 5.0. All mention to embedded linux should be removed, since it's the same as linux.