doc: Remove QSettings' paths for embedded linux

Embedded Linux is just Linux nowadays.

Fixes: QTBUG-116715
Change-Id: I1f64d27550db6f711c7f1f578e85cad12d0973aa
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>
(cherry picked from commit d8b7c03cc5b82276c74b6f210dc18a324ede3105)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>